Added 26 icons, added mobile support for the icomoon demo section, modified selection.json to automatically add .ca-gov-icon prefix to css icons as well as rename font files to CaGov on export, added icon group headings, and a jump to group menu.

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.18 -  10/26/2020 
+ * CA State Template v5.5 -  @version v5.5.18 -  12/29/2020 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.5.3 - /source/scss/bootstrap/ 
@@ -9480,8 +9480,8 @@ html {
 ----------------------------------------- */
 @font-face {
   font-family: 'CaGov';
-  src: url("../fonts/CaGov.eot?ocljyw");
-  src: url("../fonts/CaGov.eot?ocljyw#iefix") format("embedded-opentype"), url("../fonts/CaGov.ttf?ocljyw") format("truetype"), url("../fonts/CaGov.woff?ocljyw") format("woff"), url("../fonts/CaGov.svg??ocljyw#CaGov") format("svg");
+  src: url("../fonts/CaGov.eot");
+  src: url("../fonts/CaGov.eot") format("embedded-opentype"), url("../fonts/CaGov.ttf") format("truetype"), url("../fonts/CaGov.woff") format("woff"), url("../fonts/CaGov.svg") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -9498,84 +9498,184 @@ html {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.ca-gov-icon-instagram:before {
-  content: "\e9ef";
+.ca-gov-icon-spartan-helmet:before {
+  content: "\ea0c";
 }
 
-.ca-gov-icon-share-instagram:before {
-  content: "\e9f4";
+.ca-gov-icon-audience:before {
+  content: "\e9fa";
+}
+
+.ca-gov-icon-bars-up:before {
+  content: "\e9fb";
+}
+
+.ca-gov-icon-bars-upward:before {
+  content: "\e9fc";
+}
+
+.ca-gov-icon-cellphone-touch:before {
+  content: "\e9fd";
+}
+
+.ca-gov-icon-certificate-click:before {
+  content: "\e9fe";
+}
+
+.ca-gov-icon-desktop-checklist:before {
+  content: "\e9ff";
+}
+
+.ca-gov-icon-desktop-video-module:before {
+  content: "\ea00";
+}
+
+.ca-gov-icon-envelope-checklist:before {
+  content: "\ea01";
+}
+
+.ca-gov-icon-google:before {
+  content: "\ea02";
+}
+
+.ca-gov-icon-graduate-pointer:before {
+  content: "\ea03";
+}
+
+.ca-gov-icon-home-education:before {
+  content: "\ea04";
+}
+
+.ca-gov-icon-home-graduate:before {
+  content: "\ea05";
+}
+
+.ca-gov-icon-mobile-graduate:before {
+  content: "\ea06";
+}
+
+.ca-gov-icon-mobile-textbook:before {
+  content: "\ea07";
+}
+
+.ca-gov-icon-online-education:before {
+  content: "\ea08";
+}
+
+.ca-gov-icon-online-graduate:before {
+  content: "\ea09";
+}
+
+.ca-gov-icon-online-help:before {
+  content: "\ea0a";
+}
+
+.ca-gov-icon-online-module:before {
+  content: "\ea0b";
+}
+
+.ca-gov-icon-speech-dialog:before {
+  content: "\ea0d";
+}
+
+.ca-gov-icon-textbook:before {
+  content: "\ea0e";
+}
+
+.ca-gov-icon-user-desk:before {
+  content: "\ea0f";
+}
+
+.ca-gov-icon-user-desktop-instructor:before {
+  content: "\ea10";
+}
+
+.ca-gov-icon-user-headphone:before {
+  content: "\ea11";
+}
+
+.ca-gov-icon-user-laptop:before {
+  content: "\ea12";
+}
+
+.ca-gov-icon-users-check-mark:before {
+  content: "\ea13";
+}
+
+.ca-gov-icon-users-huddle:before {
+  content: "\ea14";
 }
 
 .ca-gov-icon-air:before {
-  content: "\e9dd";
-}
-
-.ca-gov-icon-air-polution:before {
   content: "\e9de";
 }
 
-.ca-gov-icon-air-quality:before {
+.ca-gov-icon-air-polution:before {
   content: "\e9df";
 }
 
-.ca-gov-icon-anchor:before {
+.ca-gov-icon-air-quality:before {
   content: "\e9e0";
 }
 
-.ca-gov-icon-bambinton:before {
+.ca-gov-icon-anchor:before {
   content: "\e9e1";
 }
 
-.ca-gov-icon-baseballl:before {
+.ca-gov-icon-bambinton:before {
   content: "\e9e2";
 }
 
-.ca-gov-icon-basketball:before {
+.ca-gov-icon-baseballl:before {
   content: "\e9e3";
 }
 
-.ca-gov-icon-bath:before {
+.ca-gov-icon-basketball:before {
   content: "\e9e4";
 }
 
-.ca-gov-icon-billiards:before {
+.ca-gov-icon-bath:before {
   content: "\e9e5";
 }
 
-.ca-gov-icon-bowling:before {
+.ca-gov-icon-billiards:before {
   content: "\e9e6";
 }
 
-.ca-gov-icon-care-tweezers:before {
+.ca-gov-icon-bowling:before {
   content: "\e9e7";
 }
 
-.ca-gov-icon-church:before {
+.ca-gov-icon-care-tweezers:before {
   content: "\e9e8";
 }
 
-.ca-gov-icon-down:before {
+.ca-gov-icon-church:before {
   content: "\e9e9";
 }
 
-.ca-gov-icon-down-left:before {
+.ca-gov-icon-down:before {
   content: "\e9ea";
 }
 
-.ca-gov-icon-down-right:before {
+.ca-gov-icon-down-left:before {
   content: "\e9eb";
 }
 
-.ca-gov-icon-external-link:before {
+.ca-gov-icon-down-right:before {
   content: "\e9ec";
 }
 
-.ca-gov-icon-football:before {
+.ca-gov-icon-external-link:before {
   content: "\e9ed";
 }
 
-.ca-gov-icon-golf:before {
+.ca-gov-icon-football:before {
   content: "\e9ee";
+}
+
+.ca-gov-icon-golf:before {
+  content: "\e9ef";
 }
 
 .ca-gov-icon-left:before {
@@ -9595,23 +9695,23 @@ html {
 }
 
 .ca-gov-icon-soccer:before {
-  content: "\e9f5";
+  content: "\e9f4";
 }
 
 .ca-gov-icon-tennis:before {
-  content: "\e9f6";
+  content: "\e9f5";
 }
 
 .ca-gov-icon-up:before {
-  content: "\e9f7";
+  content: "\e9f6";
 }
 
 .ca-gov-icon-up-left:before {
-  content: "\e9f8";
+  content: "\e9f7";
 }
 
 .ca-gov-icon-up-right:before {
-  content: "\e9f9";
+  content: "\e9f8";
 }
 
 .ca-gov-icon-amusement:before {
@@ -9838,7 +9938,7 @@ html {
   content: "\e99a";
 }
 
-.ca-gov-icon-hand-water:before {
+.ca-gov-icon-hand-watter:before {
   content: "\e99b";
 }
 
@@ -9902,16 +10002,16 @@ html {
   content: "\e9aa";
 }
 
-.ca-gov-icon-update:before {
-  content: "\e994";
+.ca-gov-icon-accessibility:before {
+  content: "\e992";
 }
 
 .ca-gov-icon-features:before {
   content: "\e993";
 }
 
-.ca-gov-icon-accessibility:before {
-  content: "\e992";
+.ca-gov-icon-update:before {
+  content: "\e994";
 }
 
 .ca-gov-icon-collapse-all:before {
@@ -10018,12 +10118,12 @@ html {
   content: "\e988";
 }
 
-.ca-gov-icon-digging:before {
-  content: "\e989";
-}
-
 .ca-gov-icon-gas-pump:before {
   content: "\e98a";
+}
+
+.ca-gov-icon-digging:before {
+  content: "\e989";
 }
 
 .ca-gov-icon-idea-alt:before {
@@ -10048,14 +10148,6 @@ html {
 
 .ca-gov-icon-snapchat:before {
   content: "\e990";
-}
-
-.ca-gov-icon-download-cloud:before {
-  content: "\e96c";
-}
-
-.ca-gov-icon-upload-cloud:before {
-  content: "\e96d";
 }
 
 .ca-gov-icon-biohazard:before {
@@ -10216,6 +10308,14 @@ html {
 
 .ca-gov-icon-cloud-services:before {
   content: "\e91a";
+}
+
+.ca-gov-icon-download-cloud:before {
+  content: "\e96c";
+}
+
+.ca-gov-icon-upload-cloud:before {
+  content: "\e96d";
 }
 
 .ca-gov-icon-cloud-sync:before {
@@ -10538,6 +10638,10 @@ html {
   content: "\e675";
 }
 
+.ca-gov-icon-share-Instagram:before {
+  content: "\e9f9";
+}
+
 .ca-gov-icon-share-linkedin:before {
   content: "\e676";
 }
@@ -10606,6 +10710,10 @@ html {
   content: "\e617";
 }
 
+.ca-gov-icon-Instagram:before {
+  content: "\e9dd";
+}
+
 .ca-gov-icon-youtube:before {
   content: "\e618";
 }
@@ -10670,7 +10778,7 @@ html {
   content: "\e627";
 }
 
-.ca-gov-icon-construction:before {
+.ca-gov-icon-construction1:before {
   content: "\e628";
 }
 
@@ -11274,11 +11382,11 @@ html {
   content: "\4c";
 }
 
-.ca-gov-icon-collapse:before {
+.ca-gov-icon-collapse1:before {
   content: "\58";
 }
 
-.ca-gov-icon-expand:before {
+.ca-gov-icon-expand1:before {
   content: "\59";
 }
 
@@ -17347,8 +17455,8 @@ body {
     transform: skewX(-0.78125deg) skewY(-0.78125deg);
   }
   77.7% {
-    -webkit-transform: skewX(0.39063deg) skewY(0.39063deg);
-    transform: skewX(0.39063deg) skewY(0.39063deg);
+    -webkit-transform: skewX(0.39062deg) skewY(0.39062deg);
+    transform: skewX(0.39062deg) skewY(0.39062deg);
   }
   88.8% {
     -webkit-transform: skewX(-0.19531deg) skewY(-0.19531deg);
@@ -17382,8 +17490,8 @@ body {
     transform: skewX(-0.78125deg) skewY(-0.78125deg);
   }
   77.7% {
-    -webkit-transform: skewX(0.39063deg) skewY(0.39063deg);
-    transform: skewX(0.39063deg) skewY(0.39063deg);
+    -webkit-transform: skewX(0.39062deg) skewY(0.39062deg);
+    transform: skewX(0.39062deg) skewY(0.39062deg);
   }
   88.8% {
     -webkit-transform: skewX(-0.19531deg) skewY(-0.19531deg);
