updated CaGov font library (added 40 new icons)

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.19 -  2/4/2021 
+ * CA State Template v5.5 -  @version v5.5.19 -  2/5/2021 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.6.0 - /source/scss/bootstrap/ 
@@ -9529,6 +9529,58 @@ html {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.ca-gov-icon-mask-light:before {
+  content: "\e9fb";
+}
+
+.ca-gov-icon-mask-dark:before {
+  content: "\e9fc";
+}
+
+.ca-gov-icon-vaccine-check:before {
+  content: "\e9fe";
+}
+
+.ca-gov-icon-teams:before {
+  content: "\ea0c";
+}
+
+.ca-gov-icon-pharmacy:before {
+  content: "\ea12";
+}
+
+.ca-gov-icon-cart-delivered:before {
+  content: "\ea15";
+}
+
+.ca-gov-icon-medical-shipped:before {
+  content: "\ea16";
+}
+
+.ca-gov-icon-vaccine:before {
+  content: "\ea17";
+}
+
+.ca-gov-icon-team:before {
+  content: "\ea18";
+}
+
+.ca-gov-icon-vaccine-patient:before {
+  content: "\ea19";
+}
+
+.ca-gov-icon-improvements:before {
+  content: "\ea1a";
+}
+
+.ca-gov-icon-cloud-network:before {
+  content: "\ea1b";
+}
+
+.ca-gov-icon-technology-reuse:before {
+  content: "\ea1c";
+}
+
 .ca-gov-icon-accessibility:before {
   content: "\e992";
 }
@@ -9682,7 +9734,7 @@ html {
 }
 
 .ca-gov-icon-bars-upward:before {
-  content: "\e9fc";
+  content: "\ea1d";
 }
 
 .ca-gov-icon-baseballl:before {
@@ -10786,7 +10838,7 @@ html {
 }
 
 .ca-gov-icon-online-help:before {
-  content: "\ea12";
+  content: "\ea1e";
 }
 
 .ca-gov-icon-online-module:before {
@@ -11158,7 +11210,7 @@ html {
 }
 
 .ca-gov-icon-speech-dialog:before {
-  content: "\ea0c";
+  content: "\ea1f";
 }
 
 .ca-gov-icon-speedtrain:before {
@@ -11370,19 +11422,19 @@ html {
 }
 
 .ca-gov-icon-users-check-mark:before {
-  content: "\e9fe";
+  content: "\ea27";
 }
 
 .ca-gov-icon-users-dialog:before {
   content: "\e952";
 }
 
-.ca-gov-icon-users-huddle:before {
-  content: "\e9fb";
-}
-
 .ca-gov-icon-users-interaction:before {
   content: "\e953";
+}
+
+.ca-gov-icon-users-huddle:before {
+  content: "\ea28";
 }
 
 .ca-gov-icon-van:before {
