Fixed Text is clipped when zoomed in issue

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.19 -  2/5/2021 
+ * CA State Template v5.5 -  @version v5.5.20 -  2/26/2021 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.6.0 - /source/scss/bootstrap/ 
@@ -22352,6 +22352,10 @@ div[data-state="open"] .title {
   .header-slideshow-banner .banner-pager, .header-slideshow-banner .banner-play-pause {
     top: 15px;
   }
+}
+
+.owl-height {
+  overflow: auto !important;
 }
 
 .plotly-chart .plotly-chart--loading {
