Scrollable element is not keyboard accessible issue fix, removed old v4 template navigation

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.20 -  2/26/2021 
+ * CA State Template v5.5 -  @version v5.5.20 -  3/1/2021 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.6.0 - /source/scss/bootstrap/ 
@@ -18498,7 +18498,8 @@ figcaption {
 
 .progress {
   font-size: 1rem;
-  height: 1.5rem;
+  height: unset;
+  min-height: 1.25rem;
   border-radius: 0;
 }
 
@@ -23318,6 +23319,46 @@ a.label-dark:focus, a.label-dark.focus {
 
 .height-600 {
   height: 600px !important;
+}
+
+.min-height-5 {
+  min-height: 0.3125rem !important;
+}
+
+.min-height-10 {
+  min-height: 0.625rem !important;
+}
+
+.min-height-15 {
+  min-height: 1rem !important;
+}
+
+.min-height-20 {
+  min-height: 1.25rem !important;
+}
+
+.min-height-30 {
+  min-height: 1.875rem !important;
+}
+
+.min-height-50 {
+  min-height: 3.125rem !important;
+}
+
+.min-height-100 {
+  min-height: 6.25rem !important;
+}
+
+.min-height-200 {
+  min-height: 12.5rem !important;
+}
+
+.min-height-300 {
+  min-height: 18.75rem !important;
+}
+
+.min-height-400 {
+  min-height: 25rem !important;
 }
 
 /*------------------------------------
