--- a/source/scss/cagov/media.scss
+++ b/source/scss/cagov/media.scss
@@ -79,6 +79,7 @@ border-radius: 50%;
 // Progress bar //
 .progress {
 	font-size: 1rem;
-    height: 1.5rem;
+    height:unset;
+    min-height:1.25rem;
     border-radius: $border-radius-base;
 }
