Fixed Line height is fixed issue

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.20 -  3/1/2021 
+ * CA State Template v5.5 -  @version v5.5.20 -  3/3/2021 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.6.0 - /source/scss/bootstrap/ 
@@ -12338,7 +12338,7 @@ a.list-group-item {
 }
 
 .branding .header-organization-banner {
-  line-height: 82px;
+  line-height: 5.125rem;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
@@ -12704,7 +12704,7 @@ a.list-group-item {
   .fixed.compact .header-organization-banner {
     height: 55px;
     max-height: 45px;
-    line-height: 55px;
+    line-height: 3.4375rem;
   }
   .fixed.compact .header-organization-banner a {
     max-width: 225px;
@@ -12910,7 +12910,7 @@ a.list-group-item {
   height: 100%;
   font-size: 24px;
   font-size: 1.5rem;
-  line-height: 15px;
+  line-height: 0.9375rem;
   padding: 0;
   -webkit-appearance: none;
 }
@@ -12926,7 +12926,7 @@ a.list-group-item {
   top: 0;
   font-size: 29.92px;
   font-size: 1.87rem;
-  line-height: 30px;
+  line-height: 1.875rem;
 }
 
 @media (max-width: 991px) {
@@ -12949,7 +12949,7 @@ a.list-group-item {
   font-size: 3rem;
   position: absolute;
   right: -10px;
-  line-height: 44px;
+  line-height: 2.75rem;
   cursor: pointer;
   color: #777777;
 }
@@ -13046,8 +13046,8 @@ a.list-group-item {
     -webkit-appearance: none;
   }
   .featured-search .submit-container button > span {
-    font-size: 45px;
-    line-height: 45px;
+    font-size: 2.8125rem;
+    line-height: 2.8125rem;
   }
   .featured-search.active {
     position: relative;
@@ -13154,7 +13154,7 @@ a.list-group-item {
   float: left;
   font-size: 24px;
   font-size: 1.5rem;
-  line-height: 15px;
+  line-height: 0.9375rem;
   padding: 0;
   -webkit-appearance: none;
 }
@@ -13164,7 +13164,7 @@ a.list-group-item {
   top: 0;
   font-size: 29.92px;
   font-size: 1.87rem;
-  line-height: 30px;
+  line-height: 1.875rem;
 }
 
 @media (max-width: 991px) {
@@ -13178,7 +13178,7 @@ a.list-group-item {
 
 .agency-form input, .agency-form button {
   height: 40px;
-  line-height: 40px;
+  line-height: 2.5rem;
 }
 
 .agency-form button {
@@ -14931,7 +14931,7 @@ a.second-level-link [class^="ca-gov-icon-"] {
 .mobile-controls .ca-gov-icon-menu-toggle-open, .mobile-controls .ca-gov-icon-menu-toggle-closed {
   padding-left: 16px;
   padding-right: 16px;
-  line-height: 44px;
+  line-height: 2.75rem;
 }
 
 .mobile-controls .toggle-menu {
@@ -15097,8 +15097,8 @@ a.second-level-link [class^="ca-gov-icon-"] {
     position: absolute;
     top: 0;
     right: 0;
-    font-size: 24px !important;
-    line-height: 64px !important;
+    font-size: 1.5rem !important;
+    line-height: 4rem !important;
     width: 64px !important;
     height: 64px !important;
     text-align: center;
@@ -15115,8 +15115,8 @@ a.second-level-link [class^="ca-gov-icon-"] {
     position: absolute;
     width: 64px !important;
     height: 64px !important;
-    line-height: 64px !important;
-    font-size: 24px !important;
+    line-height: 4rem !important;
+    font-size: 1.5rem !important;
     top: 0;
     right: 0;
     text-align: center;
@@ -15653,7 +15653,7 @@ pre {
 .ask-button {
   overflow: hidden;
   position: relative;
-  line-height: 44px;
+  line-height: 2.75rem;
   font-size: 20px;
   font-size: 1.25rem;
 }
@@ -15679,7 +15679,7 @@ pre {
   display: block;
   padding: 3px 15px 3px 15px;
   margin: 0;
-  line-height: 40px;
+  line-height: 2.5rem;
   color: #fff;
   background: rgba(0, 0, 0, 0.8);
 }
@@ -21667,7 +21667,7 @@ div[data-state="open"] .title {
 .carousel .owl-nav [class*='owl-'] {
   background: rgba(0, 0, 0, 0.4) !important;
   color: #fff !important;
-  font-size: 20px !important;
+  font-size: 1.25rem !important;
   height: 35px;
   width: 35px;
   border-radius: 35px;
@@ -21676,7 +21676,7 @@ div[data-state="open"] .title {
 }
 
 .carousel .owl-nav [class*='owl-'] > span {
-  line-height: 35px;
+  line-height: 2.1875rem;
 }
 
 .carousel .owl-nav [class*='owl-']:hover {
@@ -21944,8 +21944,8 @@ div[data-state="open"] .title {
 }
 
 .carousel-video .owl-video-play-icon span {
-  font-size: 80px;
-  line-height: 80px;
+  font-size: 5rem;
+  line-height: 5rem;
   color: white;
   opacity: 0;
   background-color: #222222;
