--- a/source/scss/cagov/ask-group.scss
+++ b/source/scss/cagov/ask-group.scss
@@ -121,7 +121,7 @@ $ask-bg-hover: rgba(0, 0, 0, 0.8);
 .ask-button {
     overflow: hidden;
     position: relative;
-    line-height: 44px;
+    line-height: 2.75rem;
     @include font-size(1.25);
 
     > span {
@@ -144,7 +144,7 @@ $ask-bg-hover: rgba(0, 0, 0, 0.8);
         display: block;
         padding: 3px 15px 3px 15px;
         margin:0;
-        line-height: 40px;
+        line-height: 2.5rem;
         color: #fff;
 		@include rgba (#000, .8);
 
