--- a/source/scss/cagov/fixed-header.scss
+++ b/source/scss/cagov/fixed-header.scss
@@ -98,7 +98,7 @@
         .header-organization-banner {
             height: 55px; // Beta 5.0 addition
             max-height: 45px; // Beta 5.0 addition
-            line-height: 55px; // Beta 5.0 addition
+            line-height: 3.4375rem; // Beta 5.0 addition
             a {
                 max-width: 225px; // Beta 5.0 addition
             }
