--- a/source/scss/cagov/global-header.scss
+++ b/source/scss/cagov/global-header.scss
@@ -68,7 +68,7 @@
     }
 
     .header-organization-banner {
-        line-height: 82px; // Beta 6.0 addition
+        line-height: 5.125rem; // Beta 6.0 addition
         -webkit-transition: all 0.3s;
         transition: all 0.3s; // Smooth transition for compact header
         @media (max-width: $screen-sm-max) {
